url for questions changed

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -28,7 +28,7 @@
         <div class="sidebar-items">
           <ul class="sidebar-items__nav nav column">
             <li class="">
-              <a href="{{url_for('questions')}}">
+              <a href="{{url_for('questions',tag='all')}}">
                 <img
                   class="icon"
                   src="{{ url_for('static',filename='img/question-mark.svg') }}"
