--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                 <a href="{{url_for('askQuestion')}}">Ask</a>
               </li>
               <li>
-                <a href="{{url_for('questions')}}">Questions</a>
+                <a href="{{url_for('questions',tag='all')}}">Questions</a>
               </li>
               <li>
                 <a href="{{url_for('profile')}}">Profile</a>
