Added Ask Question Functionality

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -128,6 +128,7 @@
                         style="font-size: 15px"
                         type="text"
                         name="title"
+                        required="true"
                         placeholder="What's your programming question? Be specific..."
                       />
                     </div>
@@ -138,6 +139,7 @@
                         class="stretchRight input-control"
                         style="font-size: 15px"
                         name="body"
+                        required="true"
                         placeholder="Please elaborate here..."
                       ></textarea>
                     </div>
