mapped logout button to logout route

--- a/templates/tags.html
+++ b/templates/tags.html
@@ -74,8 +74,8 @@
                                     <a href="{{url_for('home')}}">Home</a>
                                 </li>
                                 <li>
-                                    <a href="index.html" class="btn btn-round mt--5 bg-orange">
-                                        Logout
+                                    <a href="{{url_for('logout')}}" class="btn btn-round mt--5 bg-orange">
+                                        Log out
                                     </a>                                
                                 </li>
                             </ul>
