--- a/templates/questions.html
+++ b/templates/questions.html
@@ -68,7 +68,7 @@
                                     <a href="{{url_for('home')}}">Home</a>
                                 </li>
                                 <li>
-                                    <a href="index.html" class="btn btn-round mt--5 bg-orange">
+                                    <a href="{{url_for('logout')}}" class="btn btn-round mt--5 bg-orange">
                                         Log out
                                     </a>                                
                                 </li>
