added link to signup page

--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,10 @@
                   required="true"
                 />
               </div>
-              <div class="form-group" style="margin-left: 30px; margin-right: 30px;">
+              <div
+                class="form-group"
+                style="margin-left: 30px; margin-right: 30px"
+              >
                 <button
                   class="floating btn btn-primary bg-orange p-15 btn-block"
                 >
@@ -42,6 +45,8 @@
               </div>
               <div class="form-">
                 <a href="{{url_for('home')}}"> Back Home </a>
+                <br />
+                <a href="{{url_for('register')}}"> Dont have an account? </a>
               </div>
             </div>
           </form>
