--- a/templates/register.html
+++ b/templates/register.html
@@ -42,7 +42,10 @@
                   required="true"
                 />
               </div>
-              <div class="form-group" style="margin-left: 30px; margin-right: 30px;">
+              <div
+                class="form-group"
+                style="margin-left: 30px; margin-right: 30px"
+              >
                 <button
                   class="floating btn btn-primary bg-orange p-15 btn-block"
                 >
@@ -51,6 +54,8 @@
               </div>
               <div class="form-">
                 <a href="{{url_for('home')}}"> Back Home </a>
+                <br />
+                <a href="{{url_for('login')}}"> Already have an account? </a>
               </div>
             </div>
           </form>
