--- a/templates/index.html
+++ b/templates/index.html
@@ -1,103 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Stackoverflow lite - UI</title>
-    <link rel="stylesheet" href="../static/css/styles.css" />
-  </head>
-  <body>
-    <div class="main">
-      <div class="navbar navbar-primary">
-        <div class="container">
-          <div class="pull-left mobi-hide">
-            <ul class="nav text-center">
-              <li>
-                <a href="">
-                  <img
-                    class="hatch logo"
-                    src="../static/img/logo.png"
-                    alt="logo"
-                  />
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="pull-right">
-            <ul class="nav">
-              <li>
-                <a href="{{url_for('askQuestion')}}">Ask</a>
-              </li>
-              <li>
-                <a href="{{url_for('questions',tag='all')}}">Questions</a>
-              </li>
-              <li>
-                <a href="{{url_for('profile')}}">Profile</a>
-              </li>
-              {%if 'id' not in session.keys()%}
-              <li>
-                <a
-                  href="{{url_for('login')}}"
-                  class="text-white floating btn btn-round mt--5 bg-orange"
-                >
-                  Login
-                </a>
-              </li>
-              <li>
-                <a
-                  href="{{url_for('register')}}"
-                  class="text-white floating btn btn-round mt--5 bg-orange"
-                >
-                  Sign Up
-                </a>
-              </li>
-              {%endif%} {%if 'id' in session.keys()%}
-              <li>
-                <a
-                  href="{{url_for('logout')}}"
-                  class="btn btn-round mt--5 bg-orange"
-                >
-                  Log out
-                </a>
-              </li>
-              {%endif%}
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- ./navbar -->
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Stackoverflow lite - UI</title>
+  <link rel="stylesheet" href="../static/css/styles.css" />
+</head>
+
+<body>
+  <div class="main">
+    <div class="navbar navbar-primary">
       <div class="container">
-        <div class="wrapper">
-          <div class="col-6 mt-100 hatch">
-            <h1 class="title">Ask The Experts</h1>
-            <p>
-              There's no doubt that Tesla is delighted with the interest, but
-              the data also raises a few questions. How long will it take for
-              Tesla to fulfill all those extra orders?
-            </p>
-            <div class="pull-left pr-15">
-              <button class="btn btn-primary bg-orange p-15">Expore</button>
-            </div>
-            <div class="pull-left pl-15">
-              <button class="btn btn-primary btn-outline p-15">
-                How it works
-              </button>
-            </div>
+        <div class="pull-left mobi-hide">
+          <ul class="nav text-center">
+            <li>
+              <a href="">
+                <img class="hatch logo" src="../static/img/logo.png" alt="logo" />
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="pull-right">
+          <ul class="nav">
+            <li>
+              <a href="{{url_for('askQuestion')}}">Ask</a>
+            </li>
+            <li>
+              <a href="{{url_for('questions',tag='all')}}">Questions</a>
+            </li>
+            <li>
+              <a href="{{url_for('profile')}}">Profile</a>
+            </li>
+            {%if 'id' not in session.keys()%}
+            <li>
+              <a href="{{url_for('login')}}" class="text-white floating btn btn-round mt--5 bg-orange">
+                Login
+              </a>
+            </li>
+            <li>
+              <a href="{{url_for('register')}}" class="text-white floating btn btn-round mt--5 bg-orange">
+                Sign Up
+              </a>
+            </li>
+            {%endif%} {%if 'id' in session.keys()%}
+            <li>
+              <a href="{{url_for('logout')}}" class="btn btn-round mt--5 bg-orange">
+                Log out
+              </a>
+            </li>
+            {%endif%}
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- ./navbar -->
+    <div class="container">
+      <div class="wrapper">
+        <div class="col-6 mt-100 hatch">
+          <h1 class="title">Ask The Experts</h1>
+          <p>
+            There's no doubt that Tesla is delighted with the interest, but
+            the data also raises a few questions. How long will it take for
+            Tesla to fulfill all those extra orders?
+          </p>
+          <div class="pull-left pr-15">
+            <button class="btn btn-primary bg-orange p-15">Expore</button>
+          </div>
+          <div class="pull-left pl-15">
+            <button class="btn btn-primary btn-outline p-15">
+              How it works
+            </button>
           </div>
         </div>
-        <!-- ./wrapper -->
       </div>
-      <!-- ./container -->
-      <div class="clearfix"></div>
-      <div class="full-span bg-primary p-15 text-center">
-        <div class="mega-text">Ask A Question</div>
-        <p>
-          You can ask a question / post on our community by providing all the
-          required details.
-        </p>
-      </div>
-      <div class="main header-bg"></div>
+      <!-- ./wrapper -->
     </div>
-  </body>
+    <!-- ./container -->
+    <div class="clearfix"></div>
+    <div class="full-span bg-primary p-15 text-center">
+      <div class="mega-text">Ask A Question</div>
+      <p>
+        You can ask a question / post on our community by providing all the
+        required details.
+      </p>
+    </div>
+    <div class="main header-bg"></div>
+  </div>
+</body>
+
 </html>
