--- a/templates/ask.html
+++ b/templates/ask.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,6 +10,30 @@
       rel="stylesheet"
       href="{{ url_for('static',filename='css/styles.css') }}"
     />
+    <style>
+      .alert {
+        padding: 15px;
+        background-color: #f44336;
+        color: white;
+        border-radius: 50px;
+        margin-top: 20px;
+      }
+      
+      .closebtn {
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+        float: right;
+        font-size: 22px;
+        line-height: 20px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      
+      .closebtn:hover {
+        color: black;
+      }
+      </style>
   </head>
   <body>
     <div class="main">
@@ -114,9 +139,15 @@
         <div class="main-wrapper">
           <div class="container">
             <div class="col-6">
+              {% if n!=0 %}
+                <div class="alert">
+                  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+                  Question already exists! Check duplicate questions below.
+                </div>
+                  {% endif %}
               <div class="panel bg-white">
                 <div class="panel__heading">
-                  <div class="mega-text hatch text-primary">Ask a question</div>
+                  <div class="mega-text hatch text-primary" style="margin-top: 8px">Ask a question</div>
                 </div>
                 <div class="panel__body m-20">
                   <!-- question -->
@@ -143,15 +174,14 @@
                         placeholder="Please elaborate here..."
                       ></textarea>
                     </div>
-
                     <div class="">
                       <button
-                        class="floating pull-left btn btn-primary bg-orange p-15 btn-block"
+                      class="floating pull-left btn btn-primary bg-orange p-15 btn-block"
                       >
-                        Post Your Question
-                      </button>
-                    </div>
-                  </form>
+                      Post Your Question
+                    </button>
+                  </div>
+                </form>
                   <!-- ./question -->
                 </div>
               </div>
@@ -166,6 +196,62 @@
               </div>
             </div>
           </div>
+        {% if n!=0 %} 
+          <div class="container">
+            <div class="col-6" style="width: 800px">
+              <div class="panel bg-white">
+                <div class="panel__heading">
+                  <div class="mega-text hatch text-primary" style="margin-top: 10px; margin-bottom: 10px">
+                      Duplicate Questions 
+                  </div>
+                      <div class="clearfix bb"></div>
+                </div>
+                  <div class="panel__body m-20">
+                    {% for q in duplicate_questions %}
+                    <div class="question-list-item">
+                      <div class="col-6">
+                        <h2>
+                          <a class="text-primary" href=""> {{q[1]}} </a>
+                        </h2>
+                        {% for t in tags[loop.index0] %}
+                        <button class="btn btn-badge btn-link">{{t}}</button>
+                        {% endfor %}
+                        <h5 class="text-grey">
+                          Asked by
+                          <span class="text-primary">
+                            {{users[loop.index0][1]}}
+                          </span>
+                        </h5>
+                      </div>
+                      <!-- right icons  -->
+                      <div class="col-6">
+                        <h4>&nbsp;</h4>
+                        <table class="text-center stats-box">
+                          <tr>
+                            <td>{{anscnt[loop.index0]}}</td>
+                          </tr>
+                          <tr>
+                            <td>Answers</td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <img
+                                class="icon"
+                                src="{{ url_for('static',filename='img/paper-plane.svg') }}"
+                              />
+                            </td>
+                          </tr>
+                        </table>
+                      </div>
+                      <!-- ./right icons -->
+                    </div>
+                    <div class="clearfix bb"></div>
+                    {% endfor %} 
+                  </div>
+                </div>
+              </div>
+            </div>
+        {% endif %}
         </div>
         <!-- ./list -->
       </div>
