flashes added, home removed

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -41,7 +41,7 @@
       <div class="mobi-hide sidebar col-3 navbar-primary full-height">
         <!-- logo -->
         <div>
-          <a href="">
+          <a href="{{url_for('home')}}">
             <img
               class="sidebar__logo-backend"
               src="{{ url_for('static',filename='img/logo.png') }}"
@@ -115,9 +115,6 @@
             </div>
             <div class="pull-right">
               <ul class="nav">
-                <li>
-                  <a href="{{url_for('home')}}">Home</a>
-                </li>
                 {%if 'id' in session.keys()%}
                 <li>
                   <a
