--- a/templates/questions.html
+++ b/templates/questions.html
@@ -16,7 +16,7 @@
       <div class="mobi-hide sidebar col-3 navbar-primary full-height">
         <!-- logo -->
         <div>
-          <a href="">
+          <a href="{{url_for('home')}}">
             <img
               class="sidebar__logo-backend"
               src="{{ url_for('static',filename='img/logo.png') }}"
