--- a/templates/register.html
+++ b/templates/register.html
@@ -55,7 +55,7 @@
               <div class="form-">
                 <a href="{{url_for('home')}}"> Back Home </a>
                 <br />
-                <a href="{{url_for('login')}}"> Already have an account? </a>
+                <a href="{{url_for('login')}}"> Already have an account? Login! </a>
               </div>
             </div>
           </form>
