--- a/templates/tags.html
+++ b/templates/tags.html
@@ -13,7 +13,7 @@
         <div class=" mobi-hide sidebar col-3 navbar-primary full-height">
             <!-- logo -->
             <div>
-                <a href="">
+                <a href="{{url_for('home')}}">
                     <img class="sidebar__logo-backend" src="{{ url_for('static',filename='img/logo.png') }}" alt="logo">
                 </a>
             </div>
@@ -70,9 +70,6 @@
                         </div>
                         <div class="pull-right">
                             <ul class="nav">
-                                <li>
-                                    <a href="{{url_for('home')}}">Home</a>
-                                </li>
                                 {%if 'id' not in session.keys()%}
                                 <li>
                                     <a
