removed all animations

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -105,7 +105,7 @@
                       src="{{ url_for('static',filename='img/loupe.svg') }}"
                     />
                     <input
-                      class="input-control stretchRight input-icon-group"
+                      class="input-control input-icon-group"
                       type="text"
                       placeholder="Search for a Question..."
                     />
@@ -144,7 +144,7 @@
                   {% endif %}
               <div class="panel bg-white">
                 <div class="panel__heading">
-                  <div class="mega-text hatch text-primary" style="margin-top: 8px">Ask a question</div>
+                  <div class="mega-text text-primary" style="margin-top: 8px">Ask a question</div>
                 </div>
                 <div class="panel__body m-20">
                   <!-- question -->
@@ -152,7 +152,7 @@
                     <div class="">
                       <label>Title</label>
                       <input
-                        class="stretchRight input-control"
+                        class="input-control"
                         style="font-size: 15px"
                         type="text"
                         name="title"
@@ -164,7 +164,7 @@
                     <div class="">
                       <label>Body</label>
                       <textarea
-                        class="stretchRight input-control"
+                        class="input-control"
                         style="font-size: 15px"
                         name="body"
                         required="true"
@@ -173,7 +173,7 @@
                     </div>
                     <div class="">
                       <button
-                      class="floating pull-left btn btn-primary bg-orange p-15 btn-block"
+                      class="pull-left btn btn-primary bg-orange p-15 btn-block"
                       >
                       Post Your Question
                     </button>
@@ -198,7 +198,7 @@
             <div class="col-6" style="width: 800px">
               <div class="panel bg-white">
                 <div class="panel__heading">
-                  <div class="mega-text hatch text-primary" style="margin-top: 10px; margin-bottom: 10px">
+                  <div class="mega-text text-primary" style="margin-top: 10px; margin-bottom: 10px">
                       Duplicate Questions 
                   </div>
                       <div class="clearfix bb"></div>
