--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
           <ul class="nav text-center">
             <li>
               <a href="">
-                <img class="hatch logo" src="../static/img/logo.png" alt="logo" />
+                <img class="logo" src="../static/img/logo.png" alt="logo" />
               </a>
             </li>
           </ul>
@@ -88,7 +88,7 @@
         </div>
       {% endfor %}
       <div class="wrapper">
-        <div class="col-6 mt-100 hatch">
+        <div class="col-6 mt-100">
           <h1 class="title">Ask The Experts</h1>
           <p>
             There's no doubt that Tesla is delighted with the interest, but
