--- a/templates/questions.html
+++ b/templates/questions.html
@@ -134,7 +134,7 @@
               <div class="panel bg-white">
                 <div class="panel__heading">
                   <div
-                    class="mega-text hatch text-primary"
+                    class="mega-text text-primary"
                     style="margin-top: 10px; margin-bottom: 10px"
                   >
                     {% if tag!="all" %} {{tag}} questions {% else %} All
