--- a/templates/tags.html
+++ b/templates/tags.html
@@ -58,7 +58,7 @@
                             <ul class="nav text-center">
                                 <li>
                                     <div class="form-group mobi-hide">
-                                        <input class="input-control stretchRight input-icon-group" name="tag" type='text' value="{{search_string}}" placeholder="Search for a Tag...">
+                                        <input class="input-control input-icon-group" name="tag" type='text' value="{{search_string}}" placeholder="Search for a Tag...">
                                     </div>
                                 </li>
                                 <li>
@@ -105,7 +105,7 @@
                     <div class="col-6" style="width: 750px;">
                         <div class="panel bg-white">
                             <div class="panel__heading" >
-                                <div class="mega-text hatch text-primary" style="margin-top: 10px; margin-bottom: 10px;">
+                                <div class="mega-text text-primary" style="margin-top: 10px; margin-bottom: 10px;">
                                     {% if n==501 %}
                                     All Tags
                                     <div class="clearfix bb" style="margin-top:10px"></div> 
