--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
         <div class="col-4">&nbsp;</div>
         <div class="card card-signup col-4">
           <form class="form" action="{{url_for('login')}}" method="POST">
-            <div class="header hatch header-text header-primary">LOGIN</div>
+            <div class="header header-text header-primary">LOGIN</div>
             {% for msg in get_flashed_messages() %}
               <div class="alert">
                 <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
@@ -49,7 +49,7 @@
             <div class="form-container mt-20 p-15">
               <div class="form-group">
                 <input
-                  class="stretchRight input-control"
+                  class="input-control"
                   type="email"
                   placeholder="EMAIL"
                   name="email"
@@ -58,7 +58,7 @@
               </div>
               <div class="form-group">
                 <input
-                  class="stretchRight input-control"
+                  class="input-control"
                   type="password"
                   placeholder="PASSWORD"
                   name="password"
@@ -70,7 +70,7 @@
                 style="margin-left: 30px; margin-right: 30px"
               >
                 <button
-                  class="floating btn btn-primary bg-orange p-15 btn-block"
+                  class="btn btn-primary bg-orange p-15 btn-block"
                 >
                   Login
                 </button>
