--- a/templates/register.html
+++ b/templates/register.html
@@ -13,11 +13,11 @@
         <div class="col-4">&nbsp;</div>
         <div class="card card-signup col-4">
           <form class="form" action="{{url_for('login')}}" method="POST">
-            <div class="header hatch header-text header-primary">SIGN UP</div>
+            <div class="header header-text header-primary">SIGN UP</div>
             <div class="form-container mt-20 p-15">
               <div class="form-group">
                 <input
-                  class="stretchRight input-control"
+                  class="input-control"
                   type="text"
                   placeholder="USERNAME"
                   name="username"
@@ -26,7 +26,7 @@
               </div>
               <div class="form-group">
                 <input
-                  class="stretchRight input-control"
+                  class="input-control"
                   type="email"
                   placeholder="EMAIL"
                   name="email"
@@ -35,7 +35,7 @@
               </div>
               <div class="form-group">
                 <input
-                  class="stretchRight input-control"
+                  class="input-control"
                   type="password"
                   placeholder="PASSWORD"
                   name="password"
@@ -47,7 +47,7 @@
                 style="margin-left: 30px; margin-right: 30px"
               >
                 <button
-                  class="floating btn btn-primary bg-orange p-15 btn-block"
+                  class="btn btn-primary bg-orange p-15 btn-block"
                 >
                   SignUp
                 </button>
