--- a/templates/questions.html
+++ b/templates/questions.html
@@ -68,7 +68,7 @@
         </div>
       </div>
       <!-- ./sidebar -->
-      <div class="body-wrapper col-10">
+      <div class="body-wrapper col-10" style="margin-left: 317px;">
         <!-- navbar -->
         <div class="navbar bg-white navbar-primary p-0 navbar-fixed-top" style="height: 58px;">
           <div class="container">
