--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Stackoverflow lite - UI</title>
+  <title>Homepage - Stackoverflow lite</title>
   <link rel="stylesheet" href="../static/css/styles.css" />
   <style>
     .alert {
